@@ -9,6 +9,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 **** Include Verilog file's directory name in coverage reports.
 
+**** Fix 'for' under 'generate-for' causing error; bug38. [Rafael Shirakawa]
+
 **** Fix GCC 4.3 compile error; bug35.  [Lane Brooks]
 
 * Verilator 3.680 2008/10/08
